<resources>
    <string name="app_name">E-Cooliner</string>
    <string name="title_home">Beranda</string>
    <string name="title_profile">Profil</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_messages">Pesan</string>
    <string name="title_history">Riwayat</string>
    <string name="search">Pencarian</string>
    <string name="cart">Keranjang</string>
    <string name="logo_app">Logo App</string>

    <string name="tab_text_1">Masuk</string>
    <string name="tab_text_2">Daftar</string>
    <string name="masuk">Masuk</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="email_kamu">Email kamu</string>
    <string name="empty" />
    <string name="lupa_password">Lupa password?</string>
    <string name="image_intro">Image Intro</string>
    <string name="e_cooliner">E-Cooliner</string>
    <string name="intro_desc">E-Commerce Pasar Kuliner Bumdes Desa Rumpia</string>
    <string name="mulai">Mulai</string>
    <string name="ulangi_password">Ulangi Password</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="daftar">Daftar</string>
    <string name="populer">Popular</string>

    <string name="tab2_text_1">Makanan</string>
    <string name="tab2_text_2">Minuman</string>
    <string name="tab2_text_3">Cemilan</string>
    <string name="loading">Memuat</string>
    <string name="berhasil">Berhasil</string>
    <string name="gagal">Gagal</string>
    <string name="informasi_user">Informasi User</string>
    <string name="logout">Logout</string>
    <string name="button_edit">Button Edit</string>
    <string name="tambah_produk">Tambah Produk</string>
    <string name="stand">Stand</string>
    <string name="harga">Harga</string>
    <string name="tambahkan_ke_keranjang">Tambahkan ke Keranjang</string>
    <string name="kuantitas">Kuantitas</string>
    <string name="_1">1</string>
    <string name="button_min_product">Button min product</string>
    <string name="button_add_qty">Button add qty</string>
    <string name="alamat_detail">Alamat Detail</string>
    <string name="metode_pemesanan">Metode Pemesanan</string>
    <string name="ambil_di_tempat">Ambil di tempat</string>
    <string name="pesan_antar">Pesan Antar</string>
    <string name="selesaikan_pemesanan">Selesaikan pemesanan</string>
    <string name="total">Total</string>
    <string name="checkout">Checkout</string>
    <string name="detail">Detail</string>
    <string name="status">Status:</string>
    <string name="menunggu">Menunggu</string>
    <string name="diproses">Diproses</string>
    <string name="selesai">Selesai</string>
    <string name="test">Test</string>
    <string name="alamat">Alamat</string>
    <string name="nomor_hp">Nomor HP</string>
    <string name="nama_pemesan">Nama Pemesan</string>
    <string name="pesanan">Pesanan</string>
    <string name="tanggal_pesan">Tanggal Pesan</string>
    <string name="total_bayar">Total Bayar</string>
    <string name="konfirmasi_selesai">Konfirmasi selesai</string>
    <string name="process_order">Proses pesanan</string>
    <string name="harga_satuan">Harga Satuan</string>
    <string name="nama_produk">Nama Produk</string>
    <string name="tambah">Tambah</string>
    <string name="kategori">Kategori</string>
    <string name="status2">Status</string>
    <string name="no_internet_connection">Koneksi internetmu bermasalah!</string>
    <string name="no_internet_desc">Yuk, pastikan internetmu lancar dengan cek ulang paket data, WiFi, atau jaringan ditempatmu</string>
    <string name="coba_lagi">Coba lagi</string>

    <string name="simpan_perubahan">Simpan perubahan</string>
    <string name="name">Nama</string>

</resources>