<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.rizkyhamdana.bumdesprototype.ui.user.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_home_to_message"
            app:destination="@id/navigation_message"/>

    </fragment>

    <fragment
        android:id="@+id/navigation_message"
        android:name="com.rizkyhamdana.bumdesprototype.ui.user.message.MessageFragment"
        android:label="@string/title_messages"
        tools:layout="@layout/fragment_message">
        <action
            android:id="@+id/action_message_to_profile"
            app:destination="@id/navigation_profile"/>

    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.rizkyhamdana.bumdesprototype.ui.user.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_profile_to_history"
            app:destination="@id/navigation_history"/>


    </fragment>

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.rizkyhamdana.bumdesprototype.ui.user.history.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" />

</navigation>