<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.intro.IntroActivity"
    android:background="@color/blue">

    <View
        android:id="@+id/view2"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@drawable/shape_login2"
        app:layout_constraintBottom_toBottomOf="@+id/img_logo"
        app:layout_constraintEnd_toEndOf="@+id/img_logo"
        app:layout_constraintStart_toStartOf="@+id/img_logo"
        app:layout_constraintTop_toTopOf="@+id/img_logo" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="400dp"
        android:contentDescription="@string/image_intro"
        android:scaleType="fitXY"
        android:src="@drawable/intro_pic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.62" />

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"
        android:contentDescription="@string/logo_app"
        android:src="@drawable/ic_logo_app"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins_semi"
        android:text="@string/e_cooliner"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/intro_desc"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/btn_mulai"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/mulai"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/button_shape2"
        android:textColor="@color/blue"/>

</androidx.constraintlayout.widget.ConstraintLayout>